# suite-cisco-ai-building-blocks

./: .gitignore  LICENSE  Makefile  README.md  ai-building-blocks-agent-20250528.json  ai-building-blocks-database-20250528.json  check-old-paths.sh  dump-test.py  env.sample  example.env  example_environment_variables_guide.MD  find_sdwan_sdk_endpoint.py  list_files.py  platform_function_analysis.json  pyproject.toml  requirements.txt  sdk_documentation.md  sdwan_registry.json  test_otel_grpc.py  test_scaffolder_fix.py
ai-building-blocks-agent/: .gitignore  GETTING_STARTED.md  LICENSE  README.md  ai-building-agent-20250522.json  ai-building-agent-20250523.json  ai-building-blocks-agent-20250525.json  ai-building-blocks-agent-20250526.json  meraki_getOrganization.jsonl  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
ai-building-blocks-agent/app/: __init__.py  config.py  main.py  telemetry.py
ai-building-blocks-agent/app/llm/: azure_openai.py  base_llm.py  dynamic.py  prompt_templates.py  sdk_map.json
ai-building-blocks-agent/app/routers/: catalyst_routes.py  chat_routes.py  spaces_routes.py  teams_routes.py
ai-building-blocks-agent/retrievers/: __init__.py  azure_search_retriever.py  chroma_retriever.py
ai-building-blocks-agent/scripts/: Dockerfile  compare_diet_full.py  docker-compose.yaml  grafana-datasources.yml  index_functions.py  platform_scaffolder.py  reset_automated_folders.py
ai-building-blocks-agent/scripts/utils/: embedding.py  openapi_loader.py  paths.py  sdk_loader.py
ai-building-blocks-agent/static/: index.html
ai-building-blocks-agent/tools/: create_index.py  create_platform.py  create_sdk.py  diet_vs_full_report.json  jaeger_collector.py  list_chroma_collections.py  local_collector.md  prometheus.yml  reset_automated_folders.py  telemetry_stack.py  tempo-debug.yam  tempo.yaml  test_chroma_retriever.py
ai-building-blocks-agent/tools/grafana_provisioning/: datasources.yaml
ai-building-blocks-agent/user_commands/: command_menu.py  create_domain_demo_index.py  create_platform.py  create_platform_index.py  create_sdk.py  delete_sdk.py  reset_platform.py
ai-building-blocks-database/: .gitignore  README.md  example_environment_variables_guide.MD  getting_started.md  list_files.py  pyproject.toml  requirements.txt
ai-building-blocks-database/catalyst_center/api-docs/: catalyst-center-api.md
ai-building-blocks-database/cisco_spaces/api-docs/: cisco-spaces-location-cloud-api.md
ai-building-blocks-database/domain_samples/aerospace/: aerospace_sites.json  equipment_maintenance.json  regulatory_compliance.json
ai-building-blocks-database/domain_samples/agriculture/: crop_rotation.json  farm_locations.json  livestock.json  soil_management.json
ai-building-blocks-database/domain_samples/airline/: baggage_policies.json  flight_schedule.json  pilot_roster.json
ai-building-blocks-database/domain_samples/automotive/: maintenance_records.json  vehicle_specs.json
ai-building-blocks-database/domain_samples/biotechnology/: biotech_sites.json  lab_experiments.json
ai-building-blocks-database/domain_samples/construction/: building_codes.json  materials_inventory.json
ai-building-blocks-database/domain_samples/consumer-electronics/: consumer_electronics_sites.json  promotional_campaigns.json  repair_return_tickets.json  sales_invoices.json
ai-building-blocks-database/domain_samples/cybersecurity/: remediation_plans.json  threat_intel.json
ai-building-blocks-database/domain_samples/e-commerce/: customer_feedback.json  promotions.json
ai-building-blocks-database/domain_samples/education/: enrollment_records.json  exam_schedules.json  student_advising.json
ai-building-blocks-database/domain_samples/energy-utilities/: customer_billing.json  energy_locations.json  grid_infrastructure.json  maintenance_outages.json
ai-building-blocks-database/domain_samples/entertainment-media/: advertising_campaigns.json  talent_roster.json
ai-building-blocks-database/domain_samples/financial/: compliance_audit.json  corporate_reports.json  transaction_records.json
ai-building-blocks-database/domain_samples/food-and-beverage/: menu_products.json
ai-building-blocks-database/domain_samples/gaming/: game_catalog.json  in_game_transactions.json  patch_notes.json
ai-building-blocks-database/domain_samples/government-national-security/: legislation_bills.json  security_events.json  strategic_plans.json
ai-building-blocks-database/domain_samples/healthcare/: hospital_locations.json  provider_notes.json
ai-building-blocks-database/domain_samples/hospitality/: booking_records.json  complaints_feedback.json  hospitality_sites.json  housekeeping_schedules.json  loyalty_programs.json  property_listings.json
ai-building-blocks-database/domain_samples/information-technology-and-services/: client_engagements.json  compliance_audits.json  project_tasks.json  service_offerings.json  staff_records.json
ai-building-blocks-database/domain_samples/insurance/: compliance_policies.json  insurance_sites.json
ai-building-blocks-database/domain_samples/legal-services/: court_filings.json
ai-building-blocks-database/domain_samples/manufacturing/: production_plans.json
ai-building-blocks-database/domain_samples/marketing-and-advertising/: marketing_sites.json  performance_metrics.json
ai-building-blocks-database/domain_samples/mining-and-natural-resources/: extraction_sites.json  mining_projects.json  ore_shipments.json
ai-building-blocks-database/domain_samples/non-profit/: donor_records.json  impact_reports.json
ai-building-blocks-database/domain_samples/pharmaceuticals/: adverse_events.json  pharma_sites.json
ai-building-blocks-database/events/: sample_events.json
ai-building-blocks-database/platform_summaries/: platform_summaries.json
ai-building-blocks-database/scripts/: __init__.py  generate_openapi_sdks.py  process_docs.py  process_domain.py  process_events.py
ai-building-blocks-database/scripts/indexers/: __init__.py  (+4 more)
ai-building-blocks-database/source_open_api/: tortuga-schema.json
ai-building-blocks-database/webex/: README
(+2205 files in other folders)
