[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-building-blocks-agent"
version = "0.1.0"
description = "Cisco AI Building Blocks Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=14.0.0",
  "colorama",
]

[project.scripts]
create-platform = "tools.create_platform:main"
create-index = "tools.create_index:main"
create-sdk      = "tools.create_sdk:main"