[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-building-blocks-agent"
version = "0.1.0"
description = "Cisco AI Building Blocks Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=14.0.0",
  "colorama",
]

[project.scripts]
create-platform                = "user_commands.create_platform:main"
create-platform-index          = "user_commands.create_platform_index:main"
create-sdk                     = "user_commands.create_sdk:main"
reset-platform                 = "user_commands.reset_platform:main"
create-domain-demo-index       = "user_commands.create_domain_demo_index:main"
generate-openapi-sdks          = "user_commands.generate_openapi_sdks:main"
menu 			                     = "user_commands.command_menu:main"
delete-sdk 		                 = "user_commands.delete_sdk:main"
delete_platform 	             = "user_commands.reset_platform:main"

[tool.setuptools.packages.find]
where = ["."]