# ~/suite-cisco-ai-building-blocks/ai-building-blocks-database/pyproject.toml
[project]
name            = "db_scripts"
version         = "0.0.0"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# â† THIS is the bit that exposes scripts/  as  db_scripts.*
[tool.setuptools.package-dir]
db_scripts = "scripts"
