[tool.poetry]
name = "nexus_hyperfabric"
version = "1.0.6-Rev.2025-03-11.13103"
description = "A client library for accessing Cisco Nexus Hyperfabric REST API"
authors = []
readme = "README.md"
packages = [
    {include = "nexus_hyperfabric"},
]
include = ["CHANGELOG.md", "nexus_hyperfabric/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
